force-app/main/default/objects/Customer_Quotes__c/Customer_Quotes__c.object-meta.xml
<CustomObject>
    <description>Created by AppSheet</description>
    <label>Customer Quotes</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Quotess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>