force-app/main/default/objects/Customer_Quotes__c/fields/Column14__c.field-meta.xml
<CustomField>
    <fullName>Column14__c</fullName>
    <label>Column_14</label>
    <length>255</length>
    <type>Text</type>
</CustomField>