force-app/main/default/objects/Customer_Quotes__c/fields/Column16__c.field-meta.xml
<CustomField>
    <fullName>Column16__c</fullName>
    <label>Column_16</label>
    <length>255</length>
    <type>Text</type>
</CustomField>