force-app/main/default/objects/Customer_Quotes__c/fields/Date_of_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Estimate__c</fullName>
    <label>Date of Estimate</label>
    <type>Date</type>
</CustomField>