force-app/main/default/objects/Customer_Quotes__c/fields/Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Emails_Sent__c</fullName>
    <label>Emails Sent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>