force-app/main/default/objects/Customer_Quotes__c/fields/New_or_Existing_Service__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing_Service__c</fullName>
    <label>New or Existing Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>