force-app/main/default/objects/Customer_Quotes__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <label>Photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>