force-app/main/default/objects/Customer_Quotes__c/fields/Proposal_Details__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Details__c</fullName>
    <label>Proposal Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>