force-app/main/default/objects/Customer_Quotes__c/fields/QuoteID__c.field-meta.xml
<CustomField>
    <fullName>QuoteID__c</fullName>
    <externalId>true</externalId>
    <label>QuoteID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>